# splitslice-rs

./: CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs  slice.rs  str.rs
